--- a/app/src/main/res/layout/activity_add_new_business.xml
+++ b/app/src/main/res/layout/activity_add_new_business.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.ezpz.pos.activity.AddNewBusinessActivity">
+    tools:context="com.ezpz.pos.activity.AddNewCompanyActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
