--- a/app/src/main/res/layout/activity_add_new_business.xml
+++ b/app/src/main/res/layout/activity_add_new_business.xml
@@ -73,7 +73,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
-        android:background="@android:color/white">
+        android:background="@drawable/edit_text_backgroud">
 
         <Spinner
             android:id="@+id/spinnerBusinessType"
