--- a/app/src/main/res/layout/activity_cashier.xml
+++ b/app/src/main/res/layout/activity_cashier.xml
@@ -34,7 +34,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:background="@android:color/white">
+                android:background="@drawable/edit_text_backgroud">
                 <Spinner
                     android:id="@+id/spinnerCashierCategory"
                     android:layout_width="wrap_content"
