--- a/app/src/main/res/layout/fragment_product.xml
+++ b/app/src/main/res/layout/fragment_product.xml
@@ -9,7 +9,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:background="@color/colorLightGrey">
+    android:background="@drawable/edit_text_backgroud">
     <Spinner
         android:id="@+id/spinnerCategory"
         android:layout_width="wrap_content"
