--- a/app/src/main/res/layout/activity_cashier.xml
+++ b/app/src/main/res/layout/activity_cashier.xml
@@ -34,7 +34,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:background="@drawable/edit_text_backgroud">
+                android:background="@drawable/spinner_cashier_background">
                 <Spinner
                     android:id="@+id/spinnerCashierCategory"
                     android:layout_width="wrap_content"
@@ -60,7 +60,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            android:background="@android:color/white"
+            android:background="@drawable/edit_text_backgroud"
             android:layout_weight="2">
 
             <LinearLayout
