--- a/app/src/main/res/layout/list_item_cash_in.xml
+++ b/app/src/main/res/layout/list_item_cash_in.xml
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/layoutCashInItem"
-    android:layout_marginTop="2dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingLeft="10dp"
     android:paddingRight="10dp"
     android:paddingTop="10dp"
-    android:paddingBottom="10dp"
     android:background="@android:color/white">
 
     <TextView
@@ -39,6 +37,12 @@
         android:layout_alignStart="@+id/txtTotalCashIn"
         android:layout_marginTop="20dp"/>
 
+    <View
+        android:layout_marginTop="10dp"
+        android:layout_below="@id/txtDescription"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#c0c0c0"/>
 
 
 </RelativeLayout>
