--- a/app/src/main/res/layout/list_item_company_member.xml
+++ b/app/src/main/res/layout/list_item_company_member.xml
@@ -5,8 +5,6 @@
     android:paddingLeft="10dp"
     android:paddingRight="10dp"
     android:paddingTop="10dp"
-    android:paddingBottom="10dp"
-    android:layout_marginBottom="3dp"
     android:id="@+id/layoutMemberItem"
     android:background="@android:color/white">
 
@@ -65,5 +63,12 @@
         </LinearLayout>
 
     </LinearLayout>
+    <View
+        android:layout_marginTop="10dp"
+        android:layout_below="@id/layoutMemberItem"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#c0c0c0"/>
+
 
 </LinearLayout>
