--- a/app/src/main/res/layout/list_item_product.xml
+++ b/app/src/main/res/layout/list_item_product.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingLeft="10dp"
-    android:paddingTop="5dp"
+    android:paddingTop="10dp"
     android:paddingRight="10dp"
     android:background="@android:color/white">
 
@@ -19,8 +19,7 @@
             android:id="@+id/imageViewProduct"
             android:background="@drawable/notavailable"
             android:layout_marginLeft="10dp"
-            android:scaleType="fitXY"
-            android:layout_marginTop="10dp" />
+            android:scaleType="fitXY" />
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -119,12 +118,14 @@
                             android:text="Disc" />
                     </LinearLayout>
                 </LinearLayout>
-
-
             </LinearLayout>
         </LinearLayout>
-
-
-
     </RelativeLayout>
+
+    <View
+        android:layout_marginTop="10dp"
+        android:layout_below="@id/layoutProductItem"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#c0c0c0"/>
 </RelativeLayout>
